Revise API
Closes #151