@@ -18,31 +18,42 @@
 package de.sormuras.bach.action;
 
 import de.sormuras.bach.Bach;
-import de.sormuras.bach.project.SourceUnit;
-import de.sormuras.bach.project.TestSources;
+import de.sormuras.bach.project.TestSpacePreview;
+import de.sormuras.bach.project.Unit;
+import de.sormuras.bach.tool.Javac;
 import java.nio.file.Path;
 
-/** An action that compiles test sources to modules. */
-public class TestRealmBuilder extends BuildTestRealmAction<TestSources> {
+/** An action that compiles test-preview sources to modules. */
+public class CompileTestSpacePreview extends BuildTestCodeSpace<TestSpacePreview> {
 
-  public TestRealmBuilder(Bach bach) {
-    super(bach, bach.project().sources().testSources());
+  public CompileTestSpacePreview(Bach bach) {
+    super(bach, bach.project().spaces().preview());
+  }
+
+  @Override
+  public Javac computeJavacCall() {
+    return super.computeJavacCall()
+        .with("--enable-preview")
+        .with("--release", Runtime.version().feature())
+        .with("-Xlint:-preview");
   }
 
   @Override
   public Path[] computeModulePathsForCompileTime() {
     return new Path[] {
       base().modules(""), // main modules
+      base().modules("test"), // test modules
       base().libraries() // external modules
     };
   }
 
   @Override
-  public Path[] computeModulePathsForRuntime(SourceUnit unit) {
+  public Path[] computeModulePathsForRuntime(Unit unit) {
     return new Path[] {
-      project().toModuleArchive(realm().name(), unit.name()), // module under test
+      project().toModuleArchive(space().name(), unit.name()), // module under test
       base().modules(""), // main modules
-      base().modules(realm().name()), // other modules from same realm
+      base().modules("test"), // test modules
+      base().modules(space().name()), // other modules from same realm
       base().libraries() // external modules
     };
   }
